<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="300dp"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/bug_report"
    android:padding="5dp">

    <TextView
        android:id="@+id/close_textView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:text="@string/close"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/user_feed_back"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginLeft="10dp"
            android:paddingTop="30dp"
            android:padding="3dp"
            android:lines="4"
            android:maxLines="5"
            android:text="@string/user_feed"
            android:textColor="@color/White"
            android:textSize="15sp"
             />


        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/feed_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_feedback"
                android:textColor="@color/White"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_gravity=""
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>